# file-organizer

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: desktop-builds.yml
app/: classe.py  main.py
app/file_modules/: file_classes.py  manager_files_and_paths.py
configs/: configuration_manager.py
file_modules/: file_classes.py  manager_files_and_paths.py
