[tool.poetry]
name = "file-organizer"
version = "0.1.0"
description = ""
authors = ["Jonas Lima <jonas.lima.dev@gmail.com>"]
readme = "README.md"

package-mode = false
[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.25.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W',   'PL', 'PT']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
